stylesheets/main.css
/* cyrillic */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 300;
    src: url(https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmSU5fABc4EsA.woff2) format('woff2');
    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}

body {
    margin: 0;
    background-color: #171717;
}

header {
	font-family: 'Roboto';
    position : relative;
    margin : 10px 10px 10px 10px;
    background: rgb(122,14,62);
    background: linear-gradient(90deg, rgb(75, 13, 40) 0%, rgba(32,32,32,1) 100%);
    border-radius: 15px;
    z-index: 2;
}

.lien {
    margin: 20px 20px;
    z-index: 1;
}

.lien:not(.logo-link){
    border-color: #ffffff;
    padding: 0.6em 2.3em;
    cursor: pointer;
    font-size: 20px;
    color: #ffffff;
    background-image: linear-gradient(45deg, transparent 50%, #000000 50%);
    background-position: 25%;
    background-size: 400%;
    -webkit-transition: background 400ms ease-in-out, color 400ms ease-in-out;
    transition: background 400ms ease-in-out, color 400ms ease-in-out;
    border-radius: 10px;
}
  
.lien:hover:not(.logo-link) {
    color: #ffffff;
    background-position: 100%;
}

.main-body {
    font-family: 'Roboto';
    min-width: 40%;
    max-width: 70%;
    margin: 0 auto; /* Center the content */
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 20px; /* Add some padding for better spacing */
    font-size: 20px;
    color: #f0f0f0;
    text-align: center;
}

.menu-links{
    display: flex;
    align-items: center;
    width: 100%;
    flex-wrap: wrap;
}

.text-container {
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    z-index: 0;
}

.text-container p {
    font-size: 25px;
    color: #ffffff;
    margin: 0;
    padding: 0;
}

.form{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: top;
}

.form input {
    margin: 15px auto; 
    padding: 15px;
    border-radius: 10px;
    border: none;
    outline: none;
}

.form button{
    border-radius: 10px;
    border: none;
    outline: none;
    padding: 15px;
    margin: 15px auto;
    cursor: pointer;
    color: #ffffff;
    transition: .4s ease-in;
    font-size: 1em;
    background-color: rgb(75, 13, 40);
}

.form button:hover{
    background-color: rgb(132,21,69);
}

.error-container {
    font-family : 'Roboto';
    display: flex;
    width: 100%;
    margin-bottom: 15px; /* Add margin-bottom to create space between error message and password input */
    justify-content: flex-end;
    align-items: center;
    height: 30vh;
    flex-direction: column;
}

.error-container p {
    font-size: 30px;
    color: red;
    margin: 0;
    padding: 0;
}
.pixel_war_body {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    width: 100px; 
    height: 100px;
    margin: 20px auto;
    z-index: -2;
}

#pixel_war {
    width: 100%; 
    height: 100%;
    z-index: -1;
}

.bottom_bar{
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 50px;
    flex-direction: row;
    bottom: 0;
    width: 100%;
    flex-wrap: wrap-reverse;
}

#scaleButton {
    padding: 10px;
    margin: 0 10px;
    font-size: 16px;
    color: white;
    background-color: #555;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
}

#scaleButton:hover {
    background-color: #777;
}

#colorButtons {
    height: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;
    flex-wrap: wrap-reverse;
}

